# AutoDetection

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: example_config.json
docs/: ROADMAP.md  mercury_payload_example.json  upstream_job_event_example.json
mock_data/: history.json
mock_data/job-results/job-20260412-001/: results.json
openclaw_agents/: 01_parser_agent.yaml  02_collector_agent.yaml  03_analyzer_agent.yaml  04_reporter_agent.yaml
openclaw_runtime/: openclaw.json
openclaw_runtime/workspaces/at-analyzer/: AGENTS.md
openclaw_runtime/workspaces/at-collector/: AGENTS.md
openclaw_runtime/workspaces/at-entry/: AGENTS.md
openclaw_runtime/workspaces/at-parser/: AGENTS.md
openclaw_runtime/workspaces/at-reporter/: AGENTS.md
openclaw_tools/: __init__.py  run_pipeline.py
openclaw_tools/tools/: adversarial_diagnosis.py  excel_reporter.py  known_issues.json  llm_inference.py  model_chain.py  read_local_log.py  regression_detector.py  reporter.py  root_cause_cluster.py  rule_match.py  version_identifier.py
openclaw_tools/tools/rag_wiki/: __init__.py  rag_engine.py  wiki_data.json
output/: report.json  report.md
src/autodetections/: __init__.py  cli.py  config.py  models.py  orchestrator.py  reporters.py  utils.py
src/autodetections/analyzers/: __init__.py  rules.py
src/autodetections/connectors/: __init__.py  archive.py  avocado.py  llm.py  mercury.py  webhook.py
