[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autodetections-agent"
version = "0.1.0"
description = "PoC agent for Avocado-based virtualization AT failure triage"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Yichao Chen" }
]
dependencies = []

[project.scripts]
autodetections = "autodetections.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

